[package]
edition = "2018"
name = "liberasurecode"
version = "1.0.5"
authors = ["The FrugalOS Developers"]
links = "erasurecode"
build = "build.rs"
description = "A Rust wrapper for `openstack/liberasurecode`"
homepage = "https://github.com/akorosmezey/liberasurecode"
repository = "https://github.com/akorosmezey/liberasurecode"
readme = "README.md"
keywords = ["erasure-coding"]
categories = ["api-bindings", "encoding"]
license = "MIT"

[badges]
travis-ci = {repository = "frugalos/liberasurecode"}

[dependencies]
libc = "0.2"
